--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Nimbus Corp Blog
 description: Blog test
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.nimbuscorp.ca/static/media/nimbuslogowhite.50da144d76ddd9780a651c3e6fd8890b.svg
+avatar: /images/Nimbuslogo_black.png
 
 #
 # Flags below are optional
