--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,8 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: <!-- Google tag (gtag.js) -->
+google_analytics: 
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2NQC1NZC29"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
