--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Nimbus Corp Blog
+name: 
 
 # Short bio or description (displayed in the header)
-description: Blog test
+description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Nimbuslogo_black.png
