--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: 
+name: Case Studies 
 
 # Short bio or description (displayed in the header)
-description:
+description: Highlighted Case Studies of customer solutions by The Nimbus Corporation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Nimbuslogo_black.png
@@ -39,6 +39,11 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: G-38VX5VJFLV
 
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-T8675BCSSB"
+    anonymize_ip: false # default
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
