--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Case Studies 
+name: 
+# Case Studies 
 
 # Short bio or description (displayed in the header)
-description: Highlighted customer solutions by The Nimbus Corporation
+description: 
+# Highlighted customer solutions
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Nimbuslogo_black.png
