--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,7 @@ name:
 # Case Studies 
 
 # Short bio or description (displayed in the header)
-description: 
-# Highlighted customer solutions
+description: Highlighted customer solutions
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Nimbuslogo_black.png
