--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 
-# Case Studies 
+name: Case Studies 
 
 # Short bio or description (displayed in the header)
 description: Highlighted customer solutions
