--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Case Studies 
 
 # Short bio or description (displayed in the header)
-description: Highlighted customer solutions
+description: Highlighted Customer Solutions
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/Nimbuslogo_black.png
